@@ -15,8 +15,8 @@
 	<RULES ESCAPE="\"
 		IGNORE_CASE="TRUE"
 		HIGHLIGHT_DIGITS="TRUE"
-		DIGIT_RE="[[:digit:]]+(pt|pc|in|mm|cm|em|ex|px|ms|s|%)"
-		NO_WORD_SEP="-_">
+		DIGIT_RE="-?[[:digit:]]+(pt|pc|in|mm|cm|em|ex|px|ms|s|%)"
+		NO_WORD_SEP="-_%">
 
 		<SEQ TYPE="OPERATOR">:</SEQ>
 		<SEQ TYPE="NULL">;</SEQ>
